# teyuna

./: CONTRIBUTING.md  Makefile  README.md  rulebook.md
backend/: .gitignore  Makefile  pyproject.toml
backend/src/: dependencies.py  main.py  settings.py
backend/src/domain/: __init__.py
backend/src/routes/: game.py
backend/tests/api/: conftest.py  test_game_creation.py  test_joining_a_game.py
